Backport Base64 Encoding to Java 6. I feel dirty now.